--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <div id="home-page">
 
-    <h1 style="font-size: 42px">Download Youtube Videos from Source!</h1>
+    <h1 style="font-size: 42px">Download YouTube videos from source!</h1>
 
     <h2 style="margin-bottom: 50px;">All Video and Audio Tracks + Thumbnails</h2>
 
